fixes bug where wrong box would open due to overflow

--- a/src/css/projects/projects.scss
+++ b/src/css/projects/projects.scss
@@ -82,6 +82,7 @@ p {
         
         .projectoverlay {
           opacity: 1;
+          z-index: 1;
         }
       }
 
@@ -127,6 +128,8 @@ p {
           width: 70%;
           opacity: 0;
           transition: 2s 2s;
+          z-index: -1;
+          
 
           .titlegit {
             display: flex;
